# zwift

./: .gitignore  .user.yml  CLAUDE.md  README.md  dbt_project.yml  move_zwift_files.bat  profiles.yml  pyproject.toml  pytest.ini  requirements.txt  todo.md  zwift_etl.bat
.claude/: settings.local.json
.github/workflows/: ci.yml
.streamlit/: config.toml
dags/: zwift_etl_dag.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/: augmented_data.sql  schema.yml  training.sql  zone.sql  zwift_augmented_records.sql
src/: Home.py  Overview.py  dashboard.py  fitfile_etl.py  move_zwift_files.py
src/pages/: 01_Global_Statistics.py  01_Overview.py  01_global.py  02_Training_Details.py  02_training_session.py
tests/: 2023-04-04-12-33-06.fit  test_fitfile_etl.py
